--- a/tutoria/app_inicial/templates/registration/login.html
+++ b/tutoria/app_inicial/templates/registration/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="theme-color" content="#712cf9">
     <!-- Estilos locales: -->
-    <link rel="stylesheet" type="text/css" href="/static/todoapp/style.css">
+    <link rel="stylesheet" href="{% static 'app_inicial/style.css' %}">
     <!-- Estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
 
