--- a/tutoria/app_inicial/static/app_inicial/style.css
+++ b/tutoria/app_inicial/static/app_inicial/style.css
@@ -5,8 +5,8 @@
   .titulo {
     color: red;
   }
-  
-  .signin{
-    max-width:  330px;
-    padding: 15 px;
+ 
+  @media (min-width: 992px) {
+    .rounded-lg-3 { border-radius: .3rem; }
   }
+
