--- a/tutoria/app_inicial/templates/registration/register_user.html
+++ b/tutoria/app_inicial/templates/registration/register_user.html
@@ -1,31 +1,46 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
    <meta charset="UTF-8">
-   <title>Registro</title>
+   <link rel="stylesheet" href="{% static 'app_inicial/style.css' %}">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+  
 </head>
 <body>
-   <h1> Registro </h1>
-   <form method="post">
-       {% csrf_token %}
-       <div class="form-group">
-           <label for="nombre_usuario">Nombre</label>
-           <input type="text" class="form-control" id=nombre_usuario name="nombre" required>
-       </div>
+<div class="px-4 py-5 my-5 text-center">
+   <div class="container-sm"> 
+        <div class="col-lg-6 mx-auto">
+           <div class=" class="lead mb-4">
 
+    <form class="p-4 p-md-5 border rounded-3 bg-light">
+        <h1 >Registro</h1>
         <div class="form-group">
-            <label for="mail">Mail</label>
-            <input type="email" class="form-control" id="mail" name="correo" required>
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <label for="nombre_usuario">Nombre</label>
+                        <input type="text" class="form-control" id=nombre_usuario name="nombre" required>
+                    </div>
+
+                    <div class="form-group">
+                            <label for="mail">Mail</label>
+                            <input type="email" class="form-control" id="mail" name="correo" required>
+                    </div>
+
+                    <div class="form-group">
+                        <label for="contraseña">Contraseña</label>
+                        <input type="password" class="form-control" id="contraseña" name="contrasena" required>
+                    </div>
+
+                    <div class="form-group">
+                        <button type="button" class="btn btn-success">Crear Usuario </button>   
+                    </div>
         </div>
+        </div>
+            </div>
 
-       <div class="form-group">
-           <label for="contraseña">Contraseña</label>
-           <input type="password" class="form-control" id="contraseña" name="contrasena" required>
-       </div>
-
-
-        
-        <button type="submit">Crear usuario</button>
-   </form>
+    </div>
+    </form>
+</div>
 </body>
 </html>
