Cambio nombre pagina

--- a/tutoria/app_inicial/templates/registration/index.html
+++ b/tutoria/app_inicial/templates/registration/index.html
@@ -17,7 +17,7 @@
    <!-- comentario: aqui abajo se puede agregar una foto para el logo -->
      
       <!-- comentario: agregar nombre de la pagina -->
-      <h1 class="display-5 fw-bold">Nombre de la pagina</h1>
+      <h1 class="display-5 fw-bold">U-Tutores</h1>
       <div class="col-lg-6 mx-auto">
          <!-- comentario: agregar descripcion abajito -->
          <p class="lead mb-4">¡Bienvenido a nuestra comunidad! Aquí podrás compartir tutorías que quieras impartir y buscar alguna que te interese
