Creacion pagina home y de perfil, se agrego barra de busqueda, botones para volver al inicio, acceder al perfil y cerrar sesión

--- a/tutoria/app_inicial/templates/registration/login.html
+++ b/tutoria/app_inicial/templates/registration/login.html
@@ -36,8 +36,12 @@
                   <input type="checkbox" value="remember-me"> No cerrar sesión
                 </label>
               </div>
+
+              <a href="{% url 'home' %}">  
               <button class="w-100 btn btn-lg btn-primary" type="submit"> Ingresar </button>
               <hr class="my-4">
+              </a>
+
               <button type="button" class="btn btn-outline-primary" disabled>Ayuda con la Clave</button>
             </form>
           </div>
