--- a/tutoria/app_inicial/static/app_inicial/style.css
+++ b/tutoria/app_inicial/static/app_inicial/style.css
@@ -10,3 +10,18 @@
     .rounded-lg-3 { border-radius: .3rem; }
   }
 
+  body {
+    padding-bottom: 20px;
+  }
+  
+  .navbar {
+    margin-bottom: 20px;
+  }
+
+  .center {
+
+    width: 50;
+    height: 50;
+    margin: -25px 0 0 -25px;
+
+  }
