--- a/tutoria/app_inicial/templates/registration/index.html
+++ b/tutoria/app_inicial/templates/registration/index.html
@@ -17,6 +17,14 @@
    <!-- comentario: aqui abajo se puede agregar una foto para el logo -->
      
       <!-- comentario: agregar nombre de la pagina -->
+
+
+      <div class="fs-2 mb-3 ">
+         <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-chevron-bar-contract" viewBox="0 0 16 16">
+           <path fill-rule="evenodd" d="M3.646 14.854a.5.5 0 0 0 .708 0L8 11.207l3.646 3.647a.5.5 0 0 0 .708-.708l-4-4a.5.5 0 0 0-.708 0l-4 4a.5.5 0 0 0 0 .708zm0-13.708a.5.5 0 0 1 .708 0L8 4.793l3.646-3.647a.5.5 0 0 1 .708.708l-4 4a.5.5 0 0 1-.708 0l-4-4a.5.5 0 0 1 0-.708zM1 8a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 8z"/>
+         </svg>
+     </div>
+
       <h1 class="display-5 fw-bold">U-Tutores</h1>
       <div class="col-lg-6 mx-auto">
          <!-- comentario: agregar descripcion abajito -->
@@ -36,4 +44,4 @@
 
 
 </main> 
-</body>     
+</body>   
