--- a/tutoria/app_inicial/templates/registration/register_user.html
+++ b/tutoria/app_inicial/templates/registration/register_user.html
@@ -33,7 +33,9 @@
                     </div>
 
                     <div class="form-group">
-                        <button type="button" class="btn btn-success">Crear Usuario </button>   
+                        <a href="{% url 'home' %}">  
+                        <button type="button" class="btn btn-success">Crear Usuario </button> 
+                        </a>  
                     </div>
         </div>
         </div>
