--- a/tutoria/app_inicial/templates/registration/register_user.html
+++ b/tutoria/app_inicial/templates/registration/register_user.html
@@ -11,9 +11,9 @@
 <div class="px-4 py-5 my-5 text-center">
    <div class="container-sm"> 
         <div class="col-lg-6 mx-auto">
-           <div class=" class="lead mb-4">
+           <div class="lead mb-4">
 
-    <form class="p-4 p-md-5 border rounded-3 bg-light">
+    <form method="post" class="p-4 p-md-5 border rounded-3 bg-light">
         <h1 >Registro</h1>
         <div class="form-group">
                     {% csrf_token %}
@@ -32,10 +32,9 @@
                         <input type="password" class="form-control" id="contraseña" name="contrasena" required>
                     </div>
 
-                    <div class="form-group">
-                        <a href="{% url 'home' %}">  
-                        <button type="button" class="btn btn-success">Crear Usuario </button> 
-                        </a>  
+                    <div class="form-group"> 
+                        <button type="submit" class="btn btn-success">Crear Usuario </button> 
+                        
                     </div>
         </div>
         </div>
@@ -44,5 +43,6 @@
     </div>
     </form>
 </div>
+
 </body>
 </html>
