--- a/tutoria/app_inicial/static/app_inicial/style.css
+++ b/tutoria/app_inicial/static/app_inicial/style.css
@@ -25,3 +25,19 @@
     margin: -25px 0 0 -25px;
 
   }
+
+  .background {
+    background-color: rgb(239, 240, 255);
+  }
+
+  #sidebar-container {
+    min-height: 100vh;
+  }
+
+  #sidebar-container .menu {
+    width: 18rem;
+  }
+  
+  #content-wrapper.toggled #sidebar-container {
+    margin-left: 0;
+  }
