--- a/tutoria/app_inicial/templates/registration/profile.html
+++ b/tutoria/app_inicial/templates/registration/profile.html
@@ -79,11 +79,12 @@
                 alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
               <h5>Marie Horwitz</h5>
               <p>Web Designer</p>
+              <button type="button" class="btn btn-success">Editar Perfil </button> 
               <i class="far fa-edit mb-5"></i>
             </div>
             <div class="col-md-8">
               <div class="card-body p-4">
-                <h6>Information</h6>
+                <h6>Información</h6>
                 <hr class="mt-0 mb-4">
                 <div class="row pt-1">
                   <div class="col-6 mb-3">
@@ -91,27 +92,26 @@
                     <p class="text-muted">info@example.com</p>
                   </div>
                   <div class="col-6 mb-3">
-                    <h6>Phone</h6>
-                    <p class="text-muted">123 456 789</p>
+                    <h6>Nombre de Usuario</h6>
+                    <p class="text-muted">nombre de usuario</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Nombre</h6>
+                    <p class="text-muted">nombre</p>
+                  </div>
+                  <div class="col-6 mb-3">
+                    <h6>Apellido</h6>
+                    
                   </div>
                 </div>
-                <h6>Projects</h6>
+                <h6>Descripción</h6>
                 <hr class="mt-0 mb-4">
                 <div class="row pt-1">
-                  <div class="col-6 mb-3">
-                    <h6>Recent</h6>
-                    <p class="text-muted">Lorem ipsum</p>
-                  </div>
-                  <div class="col-6 mb-3">
-                    <h6>Most Viewed</h6>
-                    <p class="text-muted">Dolor sit amet</p>
-                  </div>
+              
+                  
+                  
                 </div>
-                <div class="d-flex justify-content-start">
-                  <a href="#!"><i class="fab fa-facebook-f fa-lg me-3"></i></a>
-                  <a href="#!"><i class="fab fa-twitter fa-lg me-3"></i></a>
-                  <a href="#!"><i class="fab fa-instagram fa-lg"></i></a>
-                </div>
+                
               </div>
             </div>
           </div>
