--- a/tutoria/app_inicial/static/app_inicial/style.css
+++ b/tutoria/app_inicial/static/app_inicial/style.css
@@ -27,7 +27,7 @@
   }
 
   .background {
-    background-color: rgb(239, 240, 255);
+    background-color: #d9e1ff
   }
 
   #sidebar-container {
@@ -41,3 +41,14 @@
   #content-wrapper.toggled #sidebar-container {
     margin-left: 0;
   }
+
+  .gradient-custom {
+    /* fallback for old browsers */
+    background: #f6d365;
+    
+    /* Chrome 10-25, Safari 5.1-6 */
+    background: -webkit-linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1));
+    
+    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: linear-gradient(to right bottom, rgba(246, 211, 101, 1), rgba(253, 160, 133, 1))
+    }
