--- a/tutoria/app_inicial/templates/registration/profile.html
+++ b/tutoria/app_inicial/templates/registration/profile.html
@@ -12,6 +12,7 @@
 <body>
 
   <div id ="content-wrapper" class="d-flex">
+
     <div id="sidebar-container" class="bg-light border">
 
       <div class="fs-2 mb-4">
@@ -44,63 +45,133 @@
     </div>
   
 
-  <div id = "page-container" class="w-100 background ">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light border">
-      
-      <div class="container">
-  
-     <p>
-  
-        <div class="input-group w-50">
-           <span class="input-group-text" id="basic-addon1">
-             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
-                <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
-                <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
-              </svg>
-            </span>
-        <input type="text" class="form-control" placeholder="Search topic" aria-label="Input group example" aria-describedby="basic-addon1">
-        </div>
-  
-        <a href="{% url 'home' %}">  
-          <button type="button" class="btn btn-outline-danger">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-heart" viewBox="0 0 16 16">
-              <path d="M8 6.982C9.664 5.309 13.825 8.236 8 12 2.175 8.236 6.336 5.309 8 6.982Z"/>
-              <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.707L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.646a.5.5 0 0 0 .708-.707L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
-            </svg>
-            Home
-          </button>
-        </a> 
-  
-          <a href="{% url 'profile' %}">  
-          <button type="button" class="btn btn-outline-danger" >
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
-              <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-              <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
-            </svg>
-            Profile
-          </button>
-          </a>
-    
-  
-         <a href="{% url 'logout' %}">  
-           <button type="button" class="btn btn-outline-secondary">
-            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
-              <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
-              <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
-           </svg>
-           <span class="visually-hidden">Button</span>
-           </button>
-        </a>  
-  
-     </p>
+          <div id = "page-container" class="w-100 background ">
+                            <nav class="navbar navbar-expand-lg navbar-light bg-light border">
+                              
+                                     <div class="container">
+                                      
+                                        <p>
+                                            <div class="input-group w-50">
+                                              <span class="input-group-text" id="basic-addon1">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-search-heart" viewBox="0 0 16 16">
+                                                    <path d="M6.5 4.482c1.664-1.673 5.825 1.254 0 5.018-5.825-3.764-1.664-6.69 0-5.018Z"/>
+                                                    <path d="M13 6.5a6.471 6.471 0 0 1-1.258 3.844c.04.03.078.062.115.098l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1.007 1.007 0 0 1-.1-.115h.002A6.5 6.5 0 1 1 13 6.5ZM6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11Z"/>
+                                                  </svg>
+                                                </span>
+                                            <input type="text" class="form-control" placeholder="Search topic" aria-label="Input group example" aria-describedby="basic-addon1">
+                                            </div>
+                                      
+                                            <a href="{% url 'home' %}">  
+                                              <button type="button" class="btn btn-outline-danger">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house-heart" viewBox="0 0 16 16">
+                                                  <path d="M8 6.982C9.664 5.309 13.825 8.236 8 12 2.175 8.236 6.336 5.309 8 6.982Z"/>
+                                                  <path d="M8.707 1.5a1 1 0 0 0-1.414 0L.646 8.146a.5.5 0 0 0 .708.707L2 8.207V13.5A1.5 1.5 0 0 0 3.5 15h9a1.5 1.5 0 0 0 1.5-1.5V8.207l.646.646a.5.5 0 0 0 .708-.707L13 5.793V2.5a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5v1.293L8.707 1.5ZM13 7.207V13.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V7.207l5-5 5 5Z"/>
+                                                </svg>
+                                                Home
+                                              </button>
+                                            </a> 
+                                      
+                                              <a href="{% url 'profile' %}">  
+                                              <button type="button" class="btn btn-outline-danger" >
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                                                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+                                                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+                                                </svg>
+                                                Profile
+                                              </button>
+                                              </a>
+                                        
+                                      
+                                            <a href="{% url 'logout' %}">  
+                                              <button type="button" class="btn btn-outline-secondary">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
+                                                  <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
+                                                  <path d="M9 9a1 1 0 1 0 2 0 1 1 0 0 0-2 0z"/>
+                                              </svg>
+                                              <span class="visually-hidden">Button</span>
+                                              </button>
+                                            </a> 
+                                        </p>
+                                      </div>
+                                    </nav>
+
+                                    {% block content %}
+                                    {% if user.is_authenticated %} 
+                                    <section class="vh-100" >
+                                     <div class="container py-5 h-100">
+                                       <div class="row d-flex justify-content-center align-items-center h-100">
+                                         <div class="col col-lg-6 mb-4 mb-lg-0">
+                                           <div class="card mb-3" style="border-radius: .5rem;">
+                                             <div class="row g-0">
+                                               <div class="col-md-4 gradient-custom text-center text-white"
+                                                 style="border-top-left-radius: .5rem; border-bottom-left-radius: .5rem;">
+                                                 <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava1-bg.webp"
+                                                   alt="Avatar" class="img-fluid my-5" style="width: 100px;" />
+                                                   
+                                                
+                                               </div>
+                                               <div class="col-md-8">
+                                                 <div class="card-body">
+                                                   <h6>Información</h6>
+                                                   <hr class="mt-0 mb-4">
+
+                                                   <div class="row pt-1">
+
+                                                    <div class="col-6 mb-3">
+                                                      <h6>Nombre</h6>
+                                                      <p class="text-muted"> {{user}} </p>
+                                                    </div>
+
+                                                    
+                                                     <div class="col-6 mb-3">
+                                                       <h6>Email</h6>
+                                                       <p class="text-muted"> {{user.email}} </p>
+                                                     </div>
+
+                                                    
+                                                   </div> 
+                                                   
+                                                   <div class="row pt-1">   
+                                                     <div class="col-6 mb-3">
+                                                       <h6>Phone</h6>
+                                                       <p class="text-muted"> - </p>
+                                                     </div>
+                                                   </div>
+
+                                                   <h6>Sobre mi</h6>
+                                                   <hr class="mt-0 mb-4">
+                                                   <div class="row pt-1">
+                                                     <div class="col-6 mb-3">
+                                                       <p class="text-muted">Holaaa</p>
+                                                     </div>
+                                                    
+                                                   </div>
+                                                   
+                                                 </div>
+                                               </div>
+                                             </div>
+                                           </div>
+                                         </div>
+                                       </div>
+                                     </div>
+                                   </section>
+                               
+                                    
+                                     {% else %}
+                                     <p> Registrate para ver tus detalles </p>
+                                     {% endif %}
+                               
+                                    {% endblock %}
+                               
+                               
+                               
+                               
+                                      
   </div>
+                           
+
     
-  </form>
-  
-  
-        </ul>
-      </div>
-    </nav>
+
      </div>
     
 
