avance home publicaciones

--- a/tutoria/app_inicial/templates/registration/register_user.html
+++ b/tutoria/app_inicial/templates/registration/register_user.html
@@ -11,7 +11,7 @@
 <div class="px-4 py-5 my-5 text-center">
    <div class="container-sm"> 
         <div class="col-lg-6 mx-auto">
-           <div class=" class="lead mb-4">
+           <div class="lead mb-4">
 
     <form class="p-4 p-md-5 border rounded-3 bg-light">
         <h1 >Registro</h1>
@@ -39,7 +39,7 @@
                     </div>
         </div>
         </div>
-            </div>
+        </div>
 
     </div>
     </form>
