--- a/tutoria/app_inicial/templates/registration/home.html
+++ b/tutoria/app_inicial/templates/registration/home.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   </head>
   
-  <body style="height: 2000px">
+  <body>
 
     <nav class="navbar fixed-top navbar-light bg-light justify-content-between">
       
@@ -76,7 +76,47 @@
       </div>
      </div>
     </nav>
-  
+
+  <!-- End of Navbar -->
+  <!-- boton de creacion de post's -->
+  <!-- Start of post's-->
+  <div class="container">
+    <div>
+      <h2>hola</h2>
+      <a href="hola.cl">holaaaaaaaaa</a>
+    </div>
+
+
+      <h2>Historial</h2>
+      <p>
+          <table class="table table-striped">
+              <thead>
+                  <tr>
+                      <th scope="col">Fecha</th>
+                      <th scope="col">Tutor</th>
+                      <th scope="col">Materia</th>
+                      <th scope="col">Horario</th>
+                      <th scope="col">Costo</th>
+                      <th scope="col">Calificación</th>
+                      <th scope="col">Descripcion</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  {% for publicacion in publicaciones %}
+                  <tr>
+                      <td>{{tutor.date}}</td>
+                      <td>{{tutor.tutor}}</td>
+                      <td>{{tutor.subject}}</td>
+                      <td>{{tutor.schedule}}</td>
+                      <td>{{tutor.cost}}</td>
+                      <td>{{tutor.rating}}</td>
+                  </tr>
+                  {% endfor %}
+              </tbody>
+          </table>
+      </p>
+  </div>
+
   </body>
   </html>
   
