--- a/tutoria/app_inicial/templates/registration/publicaciones.html
+++ b/tutoria/app_inicial/templates/registration/publicaciones.html
@@ -10,7 +10,7 @@
 <body>
     <!-- vamos a crear la pagina de visualizacion de publicaciones -->
     <!-- copiamos el nav bar-->
-    <nav class="navbar fixed-top navbar-light bg-light justify-content-between">
+    <nav class="navbar navbar-light bg-light justify-content-between">
       
   
         <div class="container">
