--- a/tutoria/app_inicial/templates/registration/home.html
+++ b/tutoria/app_inicial/templates/registration/home.html
@@ -11,7 +11,7 @@
   
   <body>
 
-    <nav class="navbar fixed-top navbar-light bg-light justify-content-between">
+    <nav class="navbar navbar-light bg-light justify-content-between">
       
   
       <div class="container">
