--- a/tutoria/app_inicial/templates/registration/create_publicaciones.html
+++ b/tutoria/app_inicial/templates/registration/create_publicaciones.html
@@ -1,4 +1,4 @@
-    {% load static %}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -70,7 +70,7 @@
     </nav>
     <!--  abrimos seccion form para crear las publicaciones con titulo, materia, horario, costo, descripcion -->
     <form class="p-4 p-md-5 border rounded-3 bg-light">
-    <h1>Crear publicacion</h1>
+    <h1>Crear Publicacion</h1>
     <div class="container">
         <form method="post">
             {% csrf_token %}
@@ -85,12 +85,16 @@
                 <input type="text" class="form-control" id="schedule" name="schedule" placeholder="Horario">
                 <br>
                 <label for="cost">Costo</label>
-                <input type="text" class="form-control" id="cost" name="cost" placeholder="Costo">
+                <input type="number" class="form-control" id="cost" name="cost" placeholder="Costo">
                 <br>
                 <label for="description">Descripcion</label>
                 <input type="text" class="form-control" id="description" name="description" placeholder="Descripcion">
                 <br>
-                <button type="submit" class="btn btn-primary">Publicar</button>
+                <div class="form-group">
+                  <a href="{% url 'home' %}">  
+                  <button type="button" class="btn btn-success">Publicar</button> 
+                  </a>  
+                </div>
             </div>
 
         </form>
