--- a/tutoria/app_inicial/templates/registration/create_publicaciones.html
+++ b/tutoria/app_inicial/templates/registration/create_publicaciones.html
@@ -72,7 +72,7 @@
     <form class="p-4 p-md-5 border rounded-3 bg-light">
     <h1>Crear Publicacion</h1>
     <div class="container">
-        <form method="post">
+        <form method="POST">
             {% csrf_token %}
             <div class="form-group">
                 <label for="title">Titulo</label>
