--- a/tutoria/app_inicial/templates/registration/profile.html
+++ b/tutoria/app_inicial/templates/registration/profile.html
@@ -74,7 +74,7 @@
                                               </a>
                                         
                                       
-                                            <a href="{% url 'image.png' %}">  
+                                            <a href="{% url 'logout' %}">  
                                               <button type="button" class="btn btn-outline-secondary">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-door-closed" viewBox="0 0 16 16">
                                                   <path d="M3 2a1 1 0 0 1 1-1h8a1 1 0 0 1 1 1v13h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V2zm1 13h8V2H4v13z"/>
